# ArF

./: .replit  README.md  api_server.py  app.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  replit.md  script.js  start.sh  style.css  tailwind.config.js  vite.config.js  web_app.py  web_app_enhancements.py
.streamlit/: config.toml
attached_assets/: Brake Configurations_1753526997559.py  Composite Performance Index (3)_1753527001810.py  Downforce Configurations (2)_1753515970424.PY  Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-fastf1-core-py-3183-FutureWarning-1753516041223_1753516041224.txt  Pasted-Error-creating-race-progression-plot-Invalid-property-specified-for-object-of-type-plotly-graph-obj-1753445705862_1753445705863.txt  Pasted-Error-creating-race-progression-plot-Invalid-property-specified-for-object-of-type-plotly-graph-obj-1753516548372_1753516548373.txt  Tire Performance_1753515748253.py  python f1_analysis_1753442487831.py  stress Index_1753515777343.py  track_dominance (2)_1753442477646.py
frontend/: package.json  vite.config.ts
frontend-next/: next.config.js  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
static/: app.js  styles.css
utils/: advanced_analytics.py  brake_analysis.py  comparative_analytics.py  composite_performance.py  constants.py  data_loader.py  downforce_analysis.py  driver_manager.py  enhanced_analytics.py  formatters.py  mechanical_analysis.py  pit_strategy_analysis.py  power_analysis.py  predictive_analytics.py  race_strategy.py  stress_index.py  (+7 more)
(+20 files in other folders)
